--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,5 +2,4 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home/achmadfi/public_html/HRISLaravel9
-    - /bin/cp index.html $DEPLOYPATH
-    - /bin/cp style.css $DEPLOYPATH
+    - /bin/cp -r * $DEPLOYPATH
