--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 APP_NAME=Laravel
-APP_ENV=production
+APP_ENV=local
 APP_KEY=base64:w74MqHrslFqsn3TN4VtmPXrsCfkY5IUoAbCocuTg19s=
 APP_DEBUG=true
 APP_URL=http://localhost
