--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "maatwebsite/excel": "^3.1",
         "psr/simple-cache": "^2.0",
         "realrashid/sweet-alert": "^5.1",
+        "riskihajar/terbilang": "^2.0",
         "simplesoftwareio/simple-qrcode": "~4",
         "yajra/laravel-datatables-oracle": "^10.0"
     },
